# cebulka-waf

./: .gitignore  README.md
.obsidian/: workspace.json
demo/: .env  .env.example  main.js  package.json  pnpm-lock.yaml
waf/: .env  Cargo.toml  build.sh  go.mod  main.go
waf/core/: logging.go
waf/dataset/: generate.md  generate.py
waf/modules/: brotli.go  ipv4_block.go  ipv4_blocker.go  ipv6_block.go  ipv6_blocker.go  registry.go  response_size.go
waf/src/: main.rs  module.rs
waf/src/captcha/generation/: generator.rs
waf/src/captcha/generation/images/: build.sh  cleanup.sh  images.md
waf/src/endpoints/: captcha.rs  mod.rs
waf/src/modules/: brotli_compressor.rs  cookie_manager.rs  dashboard.rs  ipv4_detector.rs  ipv6_detector.rs  mod.rs
