[package]
name = "waf"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
http-body-util = "0.1.3"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5.0"
regex = "1.11.1"
tokio = { version = "1.36", features = ["full"] }
bytes = "1.5"
futures-util = "0.3"
once_cell = "1.19.0"
brotli = "7.0.0"
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4"] }
rand = "0.9.0"
strip-ansi-escapes = "0.2"
sysinfo = "0.34.2"
crossterm = "0.29.0"
